crates/flui_types/tests/compile_fail/mixed_units.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/mixed_units.rs:13:28
   |
13 |     let _mixed = logical + device;
   |                  -------   ^^^^^^ expected `Pixels`, found `DevicePixels`
   |                  |
   |                  expected because this is `flui_types::Pixels`
